доделал карточки, пока без адаптива
и без календаря

--- a/tourism/tourism-calendar.html
+++ b/tourism/tourism-calendar.html
@@ -441,11 +441,21 @@
     </div>
   </div>
    <!--начало макета-->
+   
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-  
+  <script src="https://code.jquery.com/jquery-1.9.1.min.js"></script>
+  <link id="bsdp-css" href="bootstrap-datepicker/css/bootstrap-datepicker3.min.css" rel="stylesheet">
+  <script>
+    $('#sandbox-container').datepicker({
+    maxViewMode: 1,
+    language: "ru",
+    todayHighlight: true
+});
+    
+    </script>
   <section class="tourism-section">
-   
+   <div id="sandbox-container"></div>
 <div class="container">
       <h2 class="region-caption">Календарь событий</h2>
       <div class="col-md-12 col-sm-12 tour-calendar-wrapp cal-wrapp">
@@ -475,55 +485,146 @@
       <div class="region-cards-container">
        
         <ul class="tour-calendar-container gid-list-container col-md-12">
-            <li class="col-md-6 col-sm-5"><a href=""><img src="https://nadv.ru/_v2/images/defaultimg.png" alt="">
+            <li class="col-md-6 col-sm-5"><a href=""> <div class="relative"> <img class="relative" src="https://nadv.ru/_v2/images/defaultimg.png" alt="">
+            <div class="tour-card-caption cal-caption">
+            <p id="cal-num">25</p>
+            <p id="cal-month">ноябрь</p>
+            <p id="cal-year">2017</p>
+          </div>
+        <div class="tour-calendar-ivent-type">Туризм</div>
+        </div>
             <h3 class="tour-calendar-scroll-header scroll-header" place-name="place-name-1">Подготовка к масштабному мюзиклу "Танцуют все" продолжается во Владивостоке 
             </h3>
+            <p id="ivent-place" class="col-md-9 col-sm-9 tour-calendar-ivent-place">Приморский край, гора Пидан</p>
+            <br>
             <p class="list-container_item" place-adress="place-adrees-1">Приморский край, г.Дальнегорск, длинное название места</p>
             </a>
           </li>
-            <li class="col-md-6 col-sm-5"><a href=""><img src="https://nadv.ru/_v2/images/defaultimg.png" alt=""></a>
+            <li class="col-md-6 col-sm-5"><a href=""><div class="relative"> <img class="relative" src="https://nadv.ru/_v2/images/defaultimg.png" alt="">
+            <div class="tour-card-caption cal-caption">
+            <p id="cal-num">25</p>
+            <p id="cal-month">ноябрь</p>
+            <p id="cal-year">2017</p>
+          </div>
+        <div class="tour-calendar-ivent-type">Туризм</div>
+        </div></a>
             <h3 class="tour-calendar-scroll-header scroll-header" place-name="place-name-1"><a href=""> Название места для посещения</a>
-            </h3>
+            </h3> 
+            <p id="ivent-place" class="col-md-9 col-sm-9 tour-calendar-ivent-place">Приморский край, гора Пидан</p>
+            <br>
             <p class="list-container_item" place-adress="place-adrees-1">Приморский край, г.Дальнегорск, длинное название места</p>
           </li>
-            <li class="col-md-6 col-sm-5"><a href=""> <img src="https://nadv.ru/_v2/images/defaultimg.png" alt=""></a>
+            <li class="col-md-6 col-sm-5"><a href=""> <div class="relative"> <img class="relative" src="https://nadv.ru/_v2/images/defaultimg.png" alt="">
+            <div class="tour-card-caption cal-caption">
+            <p id="cal-num">25</p>
+            <p id="cal-month">ноябрь</p>
+            <p id="cal-year">2017</p>
+          </div>
+        <div class="tour-calendar-ivent-type">Туризм</div>
+        </div></a>
             <h3 class="tour-calendar-scroll-header scroll-header" place-name="place-name-1"><a href=""> Название места для посещения</a>
-            </h3>
+            </h3> 
+            <p id="ivent-place" class="col-md-9 col-sm-9 tour-calendar-ivent-place">Приморский край, гора Пидан</p>
+            <br>
             <p class="list-container_item" place-adress="place-adrees-1">Приморский край, г.Дальнегорск, длинное название места</p>
           </li>
-            <li class="col-md-6 col-sm-5"><a href=""> <img src="https://nadv.ru/_v2/images/defaultimg.png" alt=""></a>
+            <li class="col-md-6 col-sm-5"><a href=""> <div class="relative"> <img class="relative" src="https://nadv.ru/_v2/images/defaultimg.png" alt="">
+            <div class="tour-card-caption cal-caption">
+            <p id="cal-num">25</p>
+            <p id="cal-month">ноябрь</p>
+            <p id="cal-year">2017</p>
+          </div>
+        <div class="tour-calendar-ivent-type">Туризм</div>
+        </div></a>
             <h3 class="tour-calendar-scroll-header scroll-header" place-name="place-name-1"><a href=""> Название места для посещения</a>
-            </h3>
+            </h3> 
+            <p id="ivent-place" class="col-md-9 col-sm-9 tour-calendar-ivent-place">Приморский край, гора Пидан</p>
+            <br>
             <p class="list-container_item" place-adress="place-adrees-1">Приморский край, г.Дальнегорск, длинное название места</p>
           </li>
-            <li class="col-md-6 col-sm-5"><a href=""> <img src="https://nadv.ru/_v2/images/defaultimg.png" alt=""></a>
+            <li class="col-md-6 col-sm-5"><a href=""><div class="relative"> <img class="relative" src="https://nadv.ru/_v2/images/defaultimg.png" alt="">
+            <div class="tour-card-caption cal-caption">
+            <p id="cal-num">25</p>
+            <p id="cal-month">ноябрь</p>
+            <p id="cal-year">2017</p>
+          </div>
+        <div class="tour-calendar-ivent-type">Туризм</div>
+        </div></a>
             <h3 class="tour-calendar-scroll-header scroll-header" place-name="place-name-1"><a href=""> Название места для посещения</a>
-            </h3>
+            </h3> 
+            <p id="ivent-place" class="col-md-9 col-sm-9 tour-calendar-ivent-place">Приморский край, гора Пидан</p>
+            <br>
             <p class="list-container_item" place-adress="place-adrees-1">Приморский край, г.Дальнегорск, длинное название места</p>
           </li>
-            <li class="col-md-6 col-sm-5"><a href=""> <img src="https://nadv.ru/_v2/images/defaultimg.png" alt=""></a>
+            <li class="col-md-6 col-sm-5"><a href=""><div class="relative"> <img class="relative" src="https://nadv.ru/_v2/images/defaultimg.png" alt="">
+            <div class="tour-card-caption cal-caption">
+            <p id="cal-num">25</p>
+            <p id="cal-month">ноябрь</p>
+            <p id="cal-year">2017</p>
+          </div>
+        <div class="tour-calendar-ivent-type">Туризм</div>
+        </div></a>
             <h3 class="tour-calendar-scroll-header scroll-header" place-name="place-name-1"><a href=""> Название места для посещения</a>
-            </h3>
+            </h3> 
+            <p id="ivent-place" class="col-md-9 col-sm-9 tour-calendar-ivent-place">Приморский край, гора Пидан</p>
+            <br>
             <p class="list-container_item" place-adress="place-adrees-1">Приморский край, г.Дальнегорск, длинное название места</p>
           </li>
-            <li class="col-md-6 col-sm-5"><a href=""> <img src="https://nadv.ru/_v2/images/defaultimg.png" alt=""></a>
+            <li class="col-md-6 col-sm-5"><a href=""> <div class="relative"> <img class="relative" src="https://nadv.ru/_v2/images/defaultimg.png" alt="">
+            <div class="tour-card-caption cal-caption">
+            <p id="cal-num">25</p>
+            <p id="cal-month">ноябрь</p>
+            <p id="cal-year">2017</p>
+          </div>
+        <div class="tour-calendar-ivent-type">Туризм</div>
+        </div></a>
             <h3 class="tour-calendar-scroll-header scroll-header" place-name="place-name-1"><a href=""> Название места для посещения</a>
-            </h3>
+            </h3> 
+            <p id="ivent-place" class="col-md-9 col-sm-9 tour-calendar-ivent-place">Приморский край, гора Пидан</p>
+            <br>
             <p class="list-container_item" place-adress="place-adrees-1">Приморский край, г.Дальнегорск, длинное название места</p>
           </li>
-            <li class="col-md-6 col-sm-5"><a href=""> <img src="https://nadv.ru/_v2/images/defaultimg.png" alt=""></a>
+            <li class="col-md-6 col-sm-5"><a href=""> <div class="relative"> <img class="relative" src="https://nadv.ru/_v2/images/defaultimg.png" alt="">
+            <div class="tour-card-caption cal-caption">
+            <p id="cal-num">25</p>
+            <p id="cal-month">ноябрь</p>
+            <p id="cal-year">2017</p>
+          </div>
+        <div class="tour-calendar-ivent-type">Туризм</div>
+        </div></a>
             <h3 class="tour-calendar-scroll-header scroll-header" place-name="place-name-1"><a href=""> Название места для посещения</a>
-            </h3>
+            </h3> 
+            <p id="ivent-place" class="col-md-9 col-sm-9 tour-calendar-ivent-place">Приморский край, гора Пидан</p>
+            <br>
             <p class="list-container_item" place-adress="place-adrees-1">Приморский край, г.Дальнегорск, длинное название места</p>
           </li>
-            <li class="col-md-6 col-sm-5"><a href=""> <img src="https://nadv.ru/_v2/images/defaultimg.png" alt=""></a>
+            <li class="col-md-6 col-sm-5"><a href=""> <div class="relative"> <img class="relative" src="https://nadv.ru/_v2/images/defaultimg.png" alt="">
+            <div class="tour-card-caption cal-caption">
+            <p id="cal-num">25</p>
+            <p id="cal-month">ноябрь</p>
+            <p id="cal-year">2017</p>
+          </div>
+        <div class="tour-calendar-ivent-type">Туризм</div>
+        </div></a>
             <h3 class="tour-calendar-scroll-header scroll-header" place-name="place-name-1"><a href=""> Название места для посещения</a>
-            </h3>
+            </h3> 
+            <p id="ivent-place" class="col-md-9 col-sm-9 tour-calendar-ivent-place">Приморский край, гора Пидан</p>
+            <br>
             <p class="list-container_item" place-adress="place-adrees-1">Приморский край, г.Дальнегорск, длинное название места</p>
           </li>
-            <li class="col-md-6 col-sm-5"><a href=""> <img src="https://nadv.ru/_v2/images/defaultimg.png" alt=""></a>
+            <li class="col-md-6 col-sm-5"><a href=""><div class="relative"> <img class="relative" src="https://nadv.ru/_v2/images/defaultimg.png" alt="">
+            <div class="tour-card-caption cal-caption">
+            <p id="cal-num">25</p>
+            <p id="cal-month">ноябрь</p>
+            <p id="cal-year">2017</p>
+          </div>
+        <div class="tour-calendar-ivent-type">Туризм</div>
+        </div>
+           </a>
             <h3 class="tour-calendar-scroll-header scroll-header" place-name="place-name-1"><a href=""> Название места для посещения</a>
-            </h3>
+            </h3> 
+            <p id="ivent-place" class="col-md-9 col-sm-9 tour-calendar-ivent-place">Приморский край, гора Пидан</p>
+            <br>
             <p class="list-container_item" place-adress="place-adrees-1">Приморский край, г.Дальнегорск, длинное название места</p>
           </li>
         </ul>
