--- a/tourism/tourism-calendar.html
+++ b/tourism/tourism-calendar.html
@@ -677,12 +677,12 @@
 
     <script>
     $('#sandbox-container').datepicker({
-    locale: 'ru',
+    language: 'ru',
     todayHighlight: true
 });
 
     $('#sandbox-range .input-daterange').datepicker({
-    locale: 'ru',
+    language: 'ru',
     todayHighlight: true
 });    
     </script>
